# xmsconan

./: .flake8  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: integration.yaml  xmsconan-ci.yaml
docs/: USAGE.md
docs/superpowers/specs/: 2026-04-27-packager-dependency-options-design.md
tests/: __init__.py  conftest.py  test_build_file_generator.py  test_build_library.py  test_ci_file_generator.py  test_ci_yaml_validation.py  test_cli.py  test_conan_deploy.py  test_conan_setup.py  test_coverage_generator.py  test_coverage_integration.py  test_credentials.py  test_docker_run.py  test_packager.py  test_printer.py  test_publish.py  test_utils.py  test_wheel_deploy.py  test_wheel_repair.py  test_xms_conan2_file.py  utils.py
tests/fixtures/coverage_stub/: build.toml
tests/fixtures/coverage_stub/_package/: README.md
tests/fixtures/coverage_stub/_package/tests/: test_stub.py
tests/fixtures/coverage_stub/stub/: stub.cpp  stub.h  stub.t.h
tests/fixtures/coverage_stub/stub/python/: stub_py.cpp
tests/fixtures/coverage_stub/stub/testing/: test_tools.h  (+1 more)
xmsconan/: __init__.py  build_helpers.py  cli.py  conan2_helpers.py  xms_conan2_file.py  xms_conan_file.py
xmsconan/build_tools/: __init__.py  build_library.py
xmsconan/build_tools/profiles/base/: clang_16  clang_17  clang_9  dynamic  gcc_13  gcc_5  gcc_6  gcc_7  pybind  static  testing  vs_2019  vs_2022  xms
xmsconan/build_tools/profiles/debug/: CLANG16_D  CLANG16_TESTING_D  CLANG9_TESTING_D  GCC13_D  GCC13_TESTING_D  GCC5_D  GCC5_TESTING_D  GCC6_D  GCC6_TESTING_D  GCC7_D  GCC7_TESTING_D  VS2019_D  VS2019_TESTING_D  VS2019_TESTING_DYNAMIC_D  VS2022_TESTING_D
xmsconan/build_tools/profiles/release/: CLANG16_PYBIND  CLANG16_TESTING  CLANG17_PYBIND  CLANG9  CLANG9_PYBIND  CLANG9_TESTING  GCC13  GCC13_PYBIND  GCC13_TESTING  GCC5  GCC5_PYBIND  GCC5_TESTING  GCC6  GCC6_PYBIND  GCC6_TESTING  GCC7  GCC7_PYBIND  GCC7_TESTING  VS2019  VS2019_PYBIND  VS2019_TESTING  VS2019_TESTING_DYNAMIC  VS2022_TESTING
xmsconan/ci_tools/: __init__.py  conan_deploy.py  conan_setup.py  credentials.py  docker_run.py  publish.py  wheel_deploy.py  wheel_repair.py
xmsconan/coverage_tools/: __init__.py  coverage_generator.py
xmsconan/generator_tools/: __init__.py  build_file_generator.py  ci_file_generator.py  version.py
xmsconan/generator_tools/ci_templates/: github-ci.yaml.jinja  github-coverage.yaml.jinja  gitlab-ci.yml.jinja
xmsconan/generator_tools/templates/: .flake8.jinja  CMakeLists.txt.jinja  build.py.jinja  conanfile.py.jinja
xmsconan/generator_tools/templates/_package/: pyproject.toml.jinja
xmsconan/package_tools/: __init__.py  packager.py  printer.py
(+1 files in other folders)
