[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmsconan"
version = "2.5.0"
description = "Methods and Modules used to aid in xmsconan projects"
authors = [
    {name = "Gage Larsen"}
]
license = "BSD-2-Clause"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tabulate",
    "toml",
    "jinja2",
    "setuptools-scm",
]

[project.scripts]
xmsconan = "xmsconan.cli:main"
xmsconan_gen = "xmsconan.generator_tools.build_file_generator:main"
xmsconan_ci = "xmsconan.generator_tools.ci_file_generator:main"
xmsconan_build = "xmsconan.build_tools.build_library:main"
xmsconan_conan_setup = "xmsconan.ci_tools.conan_setup:main"
xmsconan_wheel_repair = "xmsconan.ci_tools.wheel_repair:main"
xmsconan_wheel_deploy = "xmsconan.ci_tools.wheel_deploy:main"
xmsconan_conan_deploy = "xmsconan.ci_tools.conan_deploy:main"
xmsconan_publish = "xmsconan.ci_tools.publish:main"

[project.optional-dependencies]
test = ["pytest", "pyyaml"]

[project.urls]
Homepage = "https://github.com/Aquaveo/xmsconan"
Repository = "https://github.com/Aquaveo/xmsconan"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["xmsconan*"]

[tool.setuptools.package-data]
"xmsconan.generator_tools" = ["templates/**/*", "ci_templates/**/*"]
"xmsconan.build_tools" = ["profiles/**/*"]
